# LudumDare45

./: .gitignore  CMakeLists.txt  PostMortem-LD45.txt  README.md
Assets/: resources.xml
Assets/Animations/: Sprite-0001.aseprite  Sprite-0001.json  perso_IA.aseprite  perso_IA.astm  perso_IA.json  perso_everything.aseprite  perso_everything.astm  perso_everything.json  perso_nothing.aseprite  perso_nothing.astm  perso_nothing.json
Assets/Maps/: map-1.tmx  map-2.tmx  tileset.tsx
AtmogGameServerFinder/: CMakeLists.txt  main.cpp
Enlivengine/: CMakeLists.txt
Enlivengine/Enlivengine/: CMakeLists.txt
Enlivengine/Enlivengine/Enlivengine/Application/: ActionSystem.cpp  ActionSystem.hpp  Application.cpp  Application.hpp  AudioSystem.cpp  AudioSystem.hpp  ImGuiToolManager.cpp  ImGuiToolManager.hpp  PathManager.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.inl
Enlivengine/Enlivengine/Enlivengine/Graphics/: Animation.cpp  Animation.hpp  AnimationController.cpp  AnimationController.hpp  AnimationStateMachine.cpp  AnimationStateMachine.hpp  Color.cpp  Color.hpp  LinearColor.cpp  LinearColor.hpp  SFMLResources.hpp  SFMLWrapper.cpp  SFMLWrapper.hpp  ScreenshotSystem.cpp  ScreenshotSystem.hpp  Tileset.cpp  Tileset.hpp
Enlivengine/Enlivengine/Enlivengine/Map/: EllipseObject.cpp  EllipseObject.hpp  LayerBase.cpp  LayerBase.hpp  Map.cpp  Map.hpp  ObjectBase.cpp  ObjectBase.hpp  ObjectGroup.cpp  ObjectGroup.hpp  PropertyHolder.cpp  PropertyHolder.hpp  RectangleObject.cpp  RectangleObject.hpp  TileLayer.cpp  TileLayer.hpp  Tileset.cpp  Tileset.hpp
Enlivengine/Enlivengine/Enlivengine/MetaData/: MetaData.cpp  MetaData.hpp  MetaDataBase.hpp  MetaDataType.hpp  TestClassA.hpp  TestClassB.hpp  TestClassC.hpp  TestClassTemplate.hpp
Enlivengine/Enlivengine/Enlivengine/System/: Array.hpp  Assert.hpp  CompilerDetection.hpp  Compression.cpp  Compression.hpp  Config.hpp  Console.cpp  Hash.hpp  Log.cpp  Log.hpp  Macros.hpp  NonCopyable.hpp  ParserXml.cpp  ParserXml.hpp  PrimitiveTypes.hpp  Profiler.cpp  Profiler.hpp  String.cpp  String.hpp  Time.hpp  TypeTraits.hpp
Enlivengine/Enlivengine/Enlivengine/Tools/: ImGuiAnimationEditor.cpp  ImGuiAnimationEditor.hpp  ImGuiDemoWindow.cpp  ImGuiHelper.cpp  ImGuiHelper.hpp  ImGuiInputEditor.cpp  ImGuiLogger.cpp  ImGuiProfiler.cpp  ImGuiProfiler.hpp  ImGuiResourceBrowser.cpp  ImGuiResourceBrowser.hpp
Enlivengine/EnlivengineExamples/: CMakeLists.txt  EngineExample.cpp  SystemExample.cpp
Enlivengine/EnlivengineTests/: CMakeLists.txt
Enlivengine/EnlivengineTests/System/: Compression_Tests.cpp  String_Tests.cpp
Enlivengine/EnlivengineThirdParty/: CMakeLists.txt  README.md
Enlivengine/EnlivengineThirdParty/ImGuiFileDialog/: ImGuiFileDialog.cpp
Enlivengine/EnlivengineThirdParty/imgui-node-editor/: imgui_node_editor.cpp
Enlivengine/EnlivengineThirdParty/imgui-sfml/: imgui-SFML.cpp
Enlivengine/EnlivengineThirdParty/metrics_gui/: metrics_gui.cpp
Enlivengine/EnlivengineThirdParty/miniz/: miniz.h
GameClientTest/: CMakeLists.txt  main.cpp
GameServerTest/: CMakeLists.txt  main.cpp
LudumDare45/: CMakeLists.txt  Components.cpp  Components.hpp  EditorComponents.hpp  EntityPrefab.cpp  EntityPrefab.hpp  GameConfig.cpp  GameConfig.hpp  GameMap.cpp  GameMap.hpp  GameSingleton.cpp  GameSingleton.hpp  GameState.cpp  GameState.hpp  IntroState.hpp  MenuState.hpp  NothingTextSystem.hpp  PreGameState.hpp  imgui_entt_entity_editor.hpp  main.cpp
include/Enlivengine/Application/: Application.hpp  Window.hpp
include/Enlivengine/System/: Config.hpp  Profiler.hpp
src/Enlivengine/Application/: Application.cpp  Window.cpp
src/Enlivengine/Graphics/: DebugDraw.cpp
src/Enlivengine/System/: DateTime.cpp  Log.cpp
